# Ahrify-raylib

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/colors/: colors.h
src/draws/: helper.h
src/screens/: mainwindow.h
src/themes/: default_theme.json
